--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
+@import './components/styles/_typography.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Poppins';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 100px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff8600;
+
+  border-radius: 100px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ff8600;
+}
+
+.ant-modal-footer {
+  display: none;
+}
+
+:where(.css-dev-only-do-not-override-1vtf12y).ant-modal .ant-modal-content {
+  width: 100%;
+  background-color: #ffffff;
+  background-clip: border-box;
+  border: 0;
+  border-radius: 0px 0px 5px 5px;
+  box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08),
+    0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
+  pointer-events: auto;
+  padding: 10px 24px;
+}
+
+:where(.css-dev-only-do-not-override-1vtf12y).ant-modal {
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.88);
+  font-size: 14px;
+  line-height: 1.5714285714285714;
+  list-style: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  pointer-events: none;
+  position: relative;
+  top: 0px;
+  width: auto;
+  max-width: calc(20vw - 32px);
+  padding-bottom: 24px;
+}
+
+.loading {
+  color: #ff8600;
+}
+
+:where(.css-dev-only-do-not-override-1vtf12y).ant-modal .ant-modal-close-x {
+  display: block;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 0px;
+  position: relative;
+  bottom: 5px;
+  text-align: center;
+  text-transform: none;
+  text-rendering: auto;
+}
+@media screen and (max-width: 767px) {
+  :where(.css-dev-only-do-not-override-1vtf12y).ant-modal {
+    max-width: calc(80vw - 32px);
+  }
 }
